# mossball

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.autosave  CMakePresets.json  README.md  changelogwidget.cpp  changelogwidget.h  changelogwidget.ui  directorydialog.cpp  directorydialog.h  directorydialog.ui  main.cpp  vcpkg.json
.github/workflows/: build.yml  linux.yml
linux/: com.github.lumiscosity.Mossball.desktop  com.github.lumiscosity.Mossball.metainfo.xml  com.github.lumiscosity.Mossball.yml
src/: changelogwidget.cpp  changelogwidget.h  changelogwidget.ui  directorydialog.cpp  directorydialog.h  directorydialog.ui  lcfops.cpp  lcfops.h  main.cpp  mossball.cpp  mossball.h  pickerwidget.cpp  pickerwidget.h  pickerwidget.ui
src/chgen/: chgen.cpp  chgen.h
src/data/: changelog.cpp  changelog.h
src/submission/: submission.cpp  submission.h
src/ui/: changelogwidget.cpp  changelogwidget.h  directorydialog.cpp  directorydialog.h  pickerwidget.cpp  pickerwidget.h  pickerwidget.ui
src/utils/: utils.cpp  utils.h
